--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "md-uikit": "^0.1.19",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-pose": "^4.0.9",
+    "react-router-dom": "^5.1.1",
+    "react-scripts": "3.1.1",
+    "react-typist": "^2.0.5",
+    "uikit": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
