--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "md-uikit": "^0.1.19",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-pose": "^4.0.9",
-    "react-router-dom": "^5.1.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "md-uikit": "^0.1.20",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-pose": "^4.0.10",
+    "react-recaptcha": "^2.3.10",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "react-typist": "^2.0.5",
-    "uikit": "^3.2.0"
+    "uikit": "^3.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
